--- a/PASSCITY/PasscityMapCardView.xib
+++ b/PASSCITY/PasscityMapCardView.xib
@@ -23,7 +23,7 @@
                     </constraints>
                 </imageView>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CrM-DO-FXk">
-                    <rect key="frame" x="115" y="15" width="252" height="14.5"/>
+                    <rect key="frame" x="115" y="15" width="252" height="46"/>
                     <fontDescription key="fontDescription" type="system" weight="medium" pointSize="12"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
@@ -41,7 +41,7 @@
                     </connections>
                 </button>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="eK8-Ny-5gr" customClass="FloatRatingView" customModule="FloatRatingView">
-                    <rect key="frame" x="115" y="82" width="68" height="12"/>
+                    <rect key="frame" x="115" y="87" width="68" height="12"/>
                     <color key="tintColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="68" id="4VU-vD-DEG"/>
@@ -64,29 +64,29 @@
                         <userDefinedRuntimeAttribute type="boolean" keyPath="floatRatings" value="NO"/>
                     </userDefinedRuntimeAttributes>
                 </view>
-                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="iconComments" translatesAutoresizingMaskIntoConstraints="NO" id="oxc-2b-aEa">
-                    <rect key="frame" x="115" y="62" width="12" height="12"/>
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="999" verticalHuggingPriority="251" horizontalCompressionResistancePriority="999" image="iconComments" translatesAutoresizingMaskIntoConstraints="NO" id="oxc-2b-aEa">
+                    <rect key="frame" x="115" y="67" width="12" height="12"/>
                 </imageView>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="M3r-O1-7hc">
-                    <rect key="frame" x="133" y="61" width="8" height="14.5"/>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="999" verticalHuggingPriority="251" horizontalCompressionResistancePriority="999" text="0" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="M3r-O1-7hc">
+                    <rect key="frame" x="133" y="66" width="8" height="14.5"/>
                     <fontDescription key="fontDescription" type="system" pointSize="12"/>
                     <color key="textColor" red="0.59993284940000002" green="0.60003870729999997" blue="0.59992617370000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="iconLocation" translatesAutoresizingMaskIntoConstraints="NO" id="yFF-j0-smR">
-                    <rect key="frame" x="156" y="62" width="12" height="12"/>
+                    <rect key="frame" x="156" y="67" width="12" height="12"/>
                 </imageView>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0 км" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DCK-mo-oIk">
-                    <rect key="frame" x="174" y="61" width="26.5" height="14.5"/>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="999" verticalHuggingPriority="251" horizontalCompressionResistancePriority="999" text="0 км" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DCK-mo-oIk">
+                    <rect key="frame" x="174" y="66" width="26.5" height="14.5"/>
                     <fontDescription key="fontDescription" type="system" pointSize="12"/>
                     <color key="textColor" red="0.59993284940000002" green="0.60003870729999997" blue="0.59992617370000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="iconClock" translatesAutoresizingMaskIntoConstraints="NO" id="gkO-TU-Sol">
-                    <rect key="frame" x="215.5" y="62" width="12" height="12"/>
+                    <rect key="frame" x="215.5" y="67" width="12" height="12"/>
                 </imageView>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Сегодня 18:00" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mQX-ar-VsE">
-                    <rect key="frame" x="233.5" y="61" width="84.5" height="14.5"/>
+                    <rect key="frame" x="233.5" y="66" width="84.5" height="14.5"/>
                     <fontDescription key="fontDescription" type="system" pointSize="12"/>
                     <color key="textColor" red="0.59993284940000002" green="0.60003870729999997" blue="0.59992617370000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <nil key="highlightedColor"/>
@@ -96,9 +96,8 @@
             <constraints>
                 <constraint firstItem="DCK-mo-oIk" firstAttribute="leading" secondItem="yFF-j0-smR" secondAttribute="trailing" constant="6" id="2ct-jE-sg9"/>
                 <constraint firstItem="oxc-2b-aEa" firstAttribute="leading" secondItem="YpG-kh-c5m" secondAttribute="trailing" constant="15" id="36P-w9-T7j"/>
-                <constraint firstItem="M3r-O1-7hc" firstAttribute="top" relation="greaterThanOrEqual" secondItem="CrM-DO-FXk" secondAttribute="bottom" id="BbP-K4-zZ7"/>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="mQX-ar-VsE" secondAttribute="trailing" id="CVp-dp-iee"/>
-                <constraint firstItem="mQX-ar-VsE" firstAttribute="top" relation="greaterThanOrEqual" secondItem="CrM-DO-FXk" secondAttribute="bottom" constant="5" id="Cgk-jo-KeW"/>
+                <constraint firstItem="mQX-ar-VsE" firstAttribute="top" secondItem="CrM-DO-FXk" secondAttribute="bottom" constant="5" id="Cgk-jo-KeW"/>
                 <constraint firstItem="gkO-TU-Sol" firstAttribute="leading" secondItem="DCK-mo-oIk" secondAttribute="trailing" constant="15" id="Cx4-w9-pe4"/>
                 <constraint firstItem="CrM-DO-FXk" firstAttribute="leading" secondItem="YpG-kh-c5m" secondAttribute="trailing" constant="15" id="KNd-9u-hzF"/>
                 <constraint firstItem="Z4b-ba-dLy" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" id="P9a-wg-HQy"/>
@@ -116,7 +115,7 @@
                 <constraint firstItem="eK8-Ny-5gr" firstAttribute="leading" secondItem="YpG-kh-c5m" secondAttribute="trailing" constant="15" id="pq6-41-cgU"/>
                 <constraint firstItem="mQX-ar-VsE" firstAttribute="leading" secondItem="gkO-TU-Sol" secondAttribute="trailing" constant="6" id="rfk-KS-rjj"/>
                 <constraint firstItem="eK8-Ny-5gr" firstAttribute="top" secondItem="oxc-2b-aEa" secondAttribute="bottom" constant="8" id="skK-mp-ER3"/>
-                <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" secondItem="eK8-Ny-5gr" secondAttribute="bottom" constant="10" id="swR-6f-UwB"/>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" secondItem="eK8-Ny-5gr" secondAttribute="bottom" constant="5" id="swR-6f-UwB"/>
                 <constraint firstItem="gkO-TU-Sol" firstAttribute="centerY" secondItem="yFF-j0-smR" secondAttribute="centerY" id="web-qL-Rjt"/>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="mQX-ar-VsE" secondAttribute="bottom" id="wil-F9-ch7"/>
                 <constraint firstItem="M3r-O1-7hc" firstAttribute="centerY" secondItem="oxc-2b-aEa" secondAttribute="centerY" id="yBM-Av-Eks"/>
